# botcito-para-ganar-millones

./: pyproject.toml
src/: main.py
