[project]
name = "botcito-para-ganar-millones"
version = "0.1.0"
description = "Botcito para ganar dineros"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    { name = "Leonel Aliaga", email = "leonel.aliaga.v@gmail.com"},
    { name = "Rainier Moreno", email = "rmoreno@gmail.com"}
    ]

dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]
